--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
 		    <div class="col-lg-12">
 			<div class="intro-message">
 			    <h1>District Zouk</h1>
-			    <h3>The best widgets in the world!</h3>
+			    <h3>Washington DC&#39;s leading source for Brazilian Zouk classes, socials, &amp; events</h3>
 			    <hr class="intro-divider">
 			    
 			    <ul class="list-inline intro-social-buttons">
@@ -94,23 +94,9 @@
 	</li>
 
 	<li>
-		<a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
-			<i class="fa fa-twitter fa-fw"></i>
-			<span class="network-name">twitter</span>
-		</a>
-	</li>
-
-	<li>
-		<a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg">
-			<i class="fa fa-github fa-fw"></i>
-			<span class="network-name">github</span>
-		</a>
-	</li>
-
-	<li>
-		<a href="http://linkedin.com/in/yourusername" class="btn btn-default btn-lg">
-			<i class="fa fa-linkedin fa-fw"></i>
-			<span class="network-name">linkedin</span>
+		<a href="https://www.facebook.com/DistrictZouk/" class="btn btn-default btn-lg">
+			<i class="fa fa-facebook fa-fw"></i>
+			<span class="network-name">facebook</span>
 		</a>
 	</li>
 
@@ -320,23 +306,9 @@ img/contact-bg.jpg</p>
 	</li>
 
 	<li>
-		<a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
-			<i class="fa fa-twitter fa-fw"></i>
-			<span class="network-name">twitter</span>
-		</a>
-	</li>
-
-	<li>
-		<a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg">
-			<i class="fa fa-github fa-fw"></i>
-			<span class="network-name">github</span>
-		</a>
-	</li>
-
-	<li>
-		<a href="http://linkedin.com/in/yourusername" class="btn btn-default btn-lg">
-			<i class="fa fa-linkedin fa-fw"></i>
-			<span class="network-name">linkedin</span>
+		<a href="https://www.facebook.com/DistrictZouk/" class="btn btn-default btn-lg">
+			<i class="fa fa-facebook fa-fw"></i>
+			<span class="network-name">facebook</span>
 		</a>
 	</li>
 
